--- a/DigiShow/Info.plist
+++ b/DigiShow/Info.plist
@@ -5,19 +5,19 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleIconFile</key>
-	<string>icon.icns</string>
+        <string>app.icns</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleGetInfoString</key>
-        <string>DigiShow 1.1</string>
+        <string>DigiShow 1.2</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleExecutable</key>
 	<string>DigiShow</string>
 	<key>CFBundleVersion</key>
-        <string>1.1</string>
+        <string>1.2</string>
 	<key>CFBundleShortVersionString</key>
-        <string>1.1</string>
+        <string>1.2</string>
 	<key>CFBundleName</key>
 	<string>DigiShow</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -32,7 +32,7 @@
 				<string>dgs</string>
 			</array>
 			<key>CFBundleTypeIconFile</key>
-			<string>icon.icns</string>
+                        <string>doc.icns</string>
 			<key>CFBundleTypeName</key>
 			<string>DigiShow File</string>
 			<key>CFBundleTypeRole</key>
